Fix bug in login functionality

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@halo-dev/theme-earth",
+  "name": "@halo-dev/theme-earth-fix-by-anye",
   "private": true,
   "version": "1.7.1-1",
   "description": "Default theme for Halo 2.0",
