--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@halo-dev/theme-earth-fix-by-anye",
   "private": true,
-  "version": "1.7.1-2",
+  "version": "1.7.1",
   "description": "A theme fix by Anye from earth",
   "scripts": {
     "dev": "vite build --watch",
